# Score-Entropy-Discrete-Diffusion

./: .gitignore  README.md  benchmark.py  data.py  environment.yml  environment_simple.yml  graph_lib.py  gt_entropy.ipynb  install_conda.sh  losses.py  prova.ipynb  pyproject.toml  run_train.py  sampling.py  train.py  utils.py
configs/: benchmark.yaml  config.yaml  config_entropy.yaml  config_mutinfo.yaml
configs/model/: mlp.yaml  nano.yaml  nano_d1.yaml  nano_d2.yaml  small.yaml
evaluate/: prova.ipynb  run.py  run_exp.sh  run_exp_xor.sh
evaluate/config.d/: config.yaml  config_xor.yaml
evaluate/config.d/distribution/: bernoulli.yaml  categorical.yaml  xor.yaml
evaluate/config.d/estimator/: infosedd.yaml  minde.yaml
evaluate/config.d/estimator/model/: mlp.yaml  nano_d2.yaml  nano_d3.yaml  small.yaml  unetmlp.yaml
infosedd/: custom_rvs.py  data.py  graph_lib.py  infosedd.py  infosedd_old.py  ising.py  load_model.py  losses.py  run_entropy_estimate.py  run_sample.py  run_train.py  sampling.py  tasks.py  train.py  utils.py
infosedd/model/: ema.py  mlp.py  rotary.py  transformer.py  two_sedds.py  unetmlp.py  utils.py
model/: mlp.py  transformer.py  utils.py
neural_estimators/: mine_backbone.py
